--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask
-Flask-Login
-Flask-SQLAlchemy
-psycopg2-binary  # jika pakai PostgreSQL
-gunicorn
+Flask==2.3.3
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+Flask_SQLAlchemy==3.1.1
